--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -8,7 +8,7 @@ import DarkModeButton from "./DarkModeButton.astro";
 ---
 
 <header
-  class="flex justify-between items-center py-3 px-4 bg-[#f0efef] md:justify-around md:px-3 dark:bg-primary dark:border-b-neutral-600 dark:border-b"
+  class="flex relative justify-between items-center py-3 px-4 bg-[#f0efef] md:justify-around md:px-3 dark:bg-primary dark:border-b-neutral-600 dark:border-b"
 >
   <div class="flex items-center justify-center gap-8">
     <Image
@@ -54,7 +54,8 @@ import DarkModeButton from "./DarkModeButton.astro";
         name="bars-solid-dark"
         width={24}
         height={24}
-        class="menu p-2 rounded-md hover:bg-[#353535] transition-all duration-300 ease-in cursor-pointer size-full md:hidden"
+        id="menu-button"
+        class="menu p-2 rounded-md hover:bg-[#e4e4e4] dark:hover:bg-[#353535] transition-all duration-300 ease-in cursor-pointer size-full md:hidden"
       />
     </div>
   </div>
