--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Hero from "../components/ui/Hero.astro";
 import UniversitySupport from "../components/ui/UniversitySupport.astro";
 import Footer from "../components/ui/Footer.astro";
 import Layout from "../layouts/Layout.astro";
+import Sidebar from "../components/ui/Sidebar.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -13,6 +14,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
   <Header />
+  <Sidebar />
   <Hero />
   <UniversitySupport />
   <CardSection />
