Add padding bottom into characteristics component

--- a/src/components/ui/CharacteristicsSection.astro
+++ b/src/components/ui/CharacteristicsSection.astro
@@ -3,7 +3,7 @@
 ---
 
 <section
-  class="flex justify-center gap-6 p-6 w-full dark:bg-primary"
+  class="flex justify-center gap-6 p-6 w-full md:pb-15 dark:bg-primary"
   id="characteristics_id"
 >
   <div
