--- a/src/components/ui/StartButton.astro
+++ b/src/components/ui/StartButton.astro
@@ -3,6 +3,7 @@ const { hidden } = Astro.props;
 ---
 
 <button
+  onclick="window.location.href='/registro/'"
   class=`bg-[#F26A8D] border border-[#e65d7f] p-2 rounded-md font-semibold text-white cursor-pointer hover:brightness-110 hover:border-[#fcb0c3] transition-all duration-300 ease-in active:scale-90 md:block"
     ${hidden ? "hidden": ""}
   `
